updated our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Specialty Sales Team Lead with Target (i.e. I am very good at folding shirts and being yelled at by angry consumer cellular guests). I have a Bachelors in Motion Graphics and always had an interest in coding and web development!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Orlando, Florida.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include fixing up my house, gardening, and watching endless amounts of Netflix.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be a project manager for a tech company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live just west of Orlando in a small city called Mount Dora.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have an equally creative and technical mind so I believe that web development would be the perfect fit for me!</p>
     </section>
 
     <footer id="footer">
